--- a/src/app/upload-video/upload-video.component.html
+++ b/src/app/upload-video/upload-video.component.html
@@ -6,54 +6,46 @@
 
             <!--New Asset Box-->
             <div class="row align-items-start">
-                <div class="col-2"  ></div>
+                <div class="col-2"></div>
     
-                <div class="col-8" style="text-align: left;border-bottom:1px solid #222222;">
-                  <p>Add Image</p>
-    
-                  <form style="font-size: 10pt;" id="newAssetForm">
-                    <div class="mb-3">
-                      <label for="FileName" class="form-label">File Name</label>
-                      <input type="text" class="form-control" id="FileName" name="FileName" [(ngModel)]="submitData.FileName" (change)="updateForm();" >
-                    </div>
-    
-                    <div class="mb-3">
-                      <label for="userID" class="form-label">User Id</label>
-                      <input type="string" class="form-control" id="userID" name="userID" [(ngModel)]="submitData.userID" (change)="updateForm()" >
-                    </div>
-    
+                <div class="col-8" *ngIf="isNotSubmitted" style="text-align: left;border-bottom:1px solid #222222;">    
                     <div class="mb-3">
                       <label for="userName" class="form-label">User Name</label>
-                      <input type="text" class="form-control" id="userName" name="userName" [(ngModel)]="submitData.userName" (change)="updateForm()" >
+                      <input type="text" class="form-control" id="userName" name="userName" [(ngModel)]="submitData.userName"  >
+                    </div>
+
+                    <div class="mb-3">
+                      <label for="userID" class="form-label">User Id</label>
+                      <input type="string" class="form-control" id="userID" name="userID" [(ngModel)]="submitData.userID"  >
                     </div>
 
                     <div class="mb-3">
                       <label for="userName" class="form-label">title</label>
-                      <input type="text" class="form-control" id="title" name="title" [(ngModel)]="submitData.title" (change)="updateForm()" >
+                      <input type="text" class="form-control" id="title" name="title" [(ngModel)]="submitData.title"  >
                     </div>
 
                     <div class="mb-3">
                       <label for="userName" class="form-label">publisher</label>
-                      <input type="text" class="form-control" id="publisher" name="publisher" [(ngModel)]="submitData.publisher" (change)="updateForm()" >
+                      <input type="text" class="form-control" id="publisher" name="publisher" [(ngModel)]="submitData.publisher"  >
                     </div>
 
                     <div class="mb-3">
                       <label for="userName" class="form-label">producer</label>
-                      <input type="text" class="form-control" id="producer" name="producer" [(ngModel)]="submitData.producer" (change)="updateForm()" >
+                      <input type="text" class="form-control" id="producer" name="producer" [(ngModel)]="submitData.producer" >
                     </div>
 
                     <div class="mb-3">
                       <label for="userName" class="form-label">review</label>
-                      <input type="text" class="form-control" id="review" name="review" [(ngModel)]="submitData.review" (change)="updateForm()" >
+                      <input type="text" class="form-control" id="review" name="review" [(ngModel)]="submitData.review" >
                     </div>
 
                     <div class="mb-3">
                       <label for="userName" class="form-label">genre</label>
-                      <input type="text" class="form-control" id="genre" name="genre" [(ngModel)]="submitData.genre" (change)="updateForm()" >
+                      <input type="text" class="form-control" id="genre" name="genre" [(ngModel)]="submitData.genre">
                     </div>
 
                     <label for="userName" class="form-label">age</label>
-                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" type="text" id="age" name="age" [(ngModel)]="submitData.age" (change)="updateForm()">
+                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" type="text" id="age" name="age" [(ngModel)]="submitData.age">
                       <option selected>Open this select menu</option>
                       <option value="Age 4+">Age 4+</option>
                       <option value="Age 8">Age 8+</option>
@@ -65,13 +57,29 @@
         
                     <div class="mb-3">
                       <label for="File" class="form-label">File to Upload</label>
-                      <input type="file" class="form-control" id="File" name="File" [(ngModel)]="submitData.File" (change)="updateForm()" >
+                      <input type="file" class="form-control" id="File" name="File" [(ngModel)]="submitData.File">
                     </div>
-                
+
+                    <form style="font-size: 10pt;" id="newAssetForm">
+                      <div class="mb-3">
+                        <label for="FileName" class="form-label">File Name</label>
+                        <input type="text" class="form-control" id="FileName" name="FileName" [(ngModel)]="submitData.FileName">
+                      </div>
+                    
+                      <div *ngIf="loading">
+                      <div class="spinner-border text-secondary" role="status" ng-show="loading">
+                          <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
                     <button type="button" id="subNewForm" class="btn btn-primary" (click)="postImage()">Submit</button> <br/><br/>
                     
+            
                   </form>
                 </div>
+                
+                <p class="success" *ngIf="!isNotSubmitted">This Video has been Uploaded</p>
+                <p class="success" *ngIf="!isNotSubmitted">Would you like to add anther?</p>
+                <button type="button" *ngIf="!isNotSubmitted" id="subNewForm" class="btn btn-primary" (click)="antherVid()">Submit Again</button> <br/><br/>
     
                 <div class="col-2"  ></div>
             </div>
