--- a/src/app/view-all-video/view-all-video.component.html
+++ b/src/app/view-all-video/view-all-video.component.html
@@ -62,7 +62,7 @@
                             <input type="text" class="form-control" id="userName" name="userName" [(ngModel)]="comment">
                           </div>
                         </div>
-                        <a (click)="postComment(video.id, video.review)" *ngIf="!isNotLogedin" class="btn btn-secondary">Post Comment</a>
+                        <a *ngIf="!isNotLogedin" (click)="postComment(video.id, video.review)" class="btn btn-secondary">Post Comment</a>
                         <br>
                     </div>
                     <a (click)="delSingleVid(video.filepath.replace('/vidcloud856/', ''), video.id)"
