--- a/src/app/view-all-video/view-all-video.component.html
+++ b/src/app/view-all-video/view-all-video.component.html
@@ -32,8 +32,9 @@
             <div class="row">
               <div class="col" *ngFor="let video of data">
                 <div class="card" style="width: 18rem;">
-                  <video controls>
+                  <video controls crossorigin="anonymous">
                     <source src="https://cloudvidblobstorage.blob.core.windows.net{{video.filepath}}" type="video/mp4">
+                    <track default kind="captions" srclang="eng"  src="https://cloudvidblobstorage.blob.core.windows.net/vidcloudcaption/{{video.filepath.replace('/vidcloud856/', '')}}">
                     Your browser does not support the video tag.
                   </video>
                   <div class="card-body">
